# routes/index.js
@@ -1,7 +1,7 @@
 const router = require("express").Router();
 
-router.use("/authController", require("./authRoutes"));
-router.use("/bookController", require("./bookRoutes"));
+router.use("/users", require("./authRoutes"));
+router.use("/books", require("./bookRoutes"));
 
 router.use("/", require("./swagger"));
 
