# swagger.json
@@ -8,10 +8,11 @@
   "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
+    "https",
     "http"
   ],
   "paths": {
-    "/authController/": {
+    "/users/": {
       "get": {
         "tags": [
           "Users"
@@ -76,7 +77,7 @@
         }
       }
     },
-    "/authController/{id}": {
+    "/users/{id}": {
       "get": {
         "tags": [
           "Users"
@@ -186,7 +187,7 @@
         }
       }
     },
-    "/bookController/": {
+    "/books/": {
       "get": {
         "tags": [
           "Books"
@@ -251,7 +252,7 @@
         }
       }
     },
-    "/bookController/{id}": {
+    "/books/{id}": {
       "get": {
         "tags": [
           "Books"
